--- a/NuGet/Nuget.csproj
+++ b/NuGet/Nuget.csproj
@@ -19,7 +19,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <None Include="AssertMessage.nuspec">
+    <None Include="AssertMessage.Fody.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="install.ps1" />
@@ -38,7 +38,7 @@
   <Target Name="NuGetBuild" DependsOnTargets="Clean">
     <MakeDir Directories="$(SolutionDir)NuGetBuild" />
     <Copy SourceFiles="$(SolutionDir)NuGet\Fody_ToBeDeleted.txt" DestinationFolder="$(SolutionDir)NuGetBuild\Content" />
-    <Copy SourceFiles="$(SolutionDir)NuGet\AssertMessage.nuspec" DestinationFolder="$(SolutionDir)NuGetBuild" />
+    <Copy SourceFiles="$(SolutionDir)NuGet\AssertMessage.Fody.nuspec" DestinationFolder="$(SolutionDir)NuGetBuild" />
     <Copy SourceFiles="$(ProjectDir)install.ps1" DestinationFolder="$(SolutionDir)NuGetBuild\Tools" />
     <Copy SourceFiles="$(ProjectDir)uninstall.ps1" DestinationFolder="$(SolutionDir)NuGetBuild\Tools" />
     <Copy SourceFiles="$(SolutionDir)Fody\bin\$(ConfigurationName)\AssertMessage.Fody.dll" DestinationFolder="$(SolutionDir)NuGetBuild" />
