--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebugTests.cs" />
+    <Compile Include="ErrorThrowingTraceListener.cs" />
     <Compile Include="NunitTests.cs">
       <SubType>Code</SubType>
     </Compile>
