--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FodyCecil" version="2.0.4" targetFramework="net45" developmentDependency="true" />
+  <package id="FodyHelpers" version="3.0.3" targetFramework="net462" />
 </packages>
