--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -85,9 +85,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Fody\Fody.csproj">
+    <ProjectReference Include="..\AssertMessage.Fody\AssertMessage.Fody.csproj">
       <Project>{C3578A7B-09A6-4444-9383-0DEAFA4958BD}</Project>
-      <Name>Fody</Name>
+      <Name>AssertMessage.Fody</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
