--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -3,5 +3,11 @@
   <package id="FodyHelpers" version="3.0.3" targetFramework="net462" />
   <package id="MSTest.TestFramework" version="1.3.0" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net462" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net462" />
 </packages>
