--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,6 @@ build:
   verbosity: minimal
 test_script:
 - cmd: >-
-    %xunit20%\xunit.console Tests\bin\Release\Tests.dll
+    %xunit20%\xunit.console Tests\bin\Release\net462\Tests.dll
 artifacts:
 - path: nugets\**\*.nupkg
