--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,5 +5,6 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
     <DebugType>full</DebugType>
+    <NoWarn>NU5118</NoWarn>
   </PropertyGroup>
 </Project>
