--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Version>2.1.0</Version>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>11</LangVersion>
     <NoWarn>NU5118</NoWarn>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
